# cadence

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yaml  install.sh  package.json
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
cli/: Cargo.toml  e2e_validate.sh
cli/src/: betting.rs  config.rs  error.rs  logs.rs  main.rs  notify.rs
cli/src/agent/: claude.rs  mod.rs  role.rs
cli/src/api/: client.rs  types.rs
cli/src/commands/: achievements_cmd.rs  cancel.rs  config.rs  config_cmd.rs  daemon.rs  list.rs  login.rs  logout.rs  logs.rs  mod.rs  proposal.rs  resume.rs  run.rs  status.rs  ui.rs  whoami.rs
cli/src/flair/: personality.rs
cli/src/github/: checks.rs  mod.rs  pr.rs
cli/src/pipeline/: mod.rs  prompts.rs  runner.rs  stage.rs  state.rs
client/: index.html  vercel.json
client/src/: App.test.tsx
infra/: services.tf  variables.tf
landing/: index.html  vercel.json
proposals/: agent-run-logs.md  durable-workflows-with-workflow-sdk.md  implement-cadence.md  implement-tmpo.md  making-cadence-more-fun.md  open-source-readiness.md  phase-1-data-foundation-and-workflow-crud.md  phase-2-workflow-engine-and-planner.md  phase-3-dev-agent-and-github-integration.md  phase-4-ci-review-and-regression.md  phase-5-e2e-verification-and-signoff.md  phase-6-run-logs-and-web-polish.md  product-brief.md
server/: .env.example  bun.lockb  eslint.config.js  package.json  schema.yaml
server/migrations/: 1737200000000_create-workflows.cjs  1737300000000_create-steps.cjs
server/scripts/: generate-embedded-public.ts  patch-wdk.mjs
(+85 files in other folders)
