[package]
name = "cadence"
version = "0.1.0"
edition = "2021"
description = "CLI orchestrator for multi-agent SDLC workflows"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"
